modules/aws/vpc-minimal/main.tf
provider "aws" { region=var.region }
resource "aws_vpc" "this" { cidr_block="10.100.0.0/16" enable_dns_support=true enable_dns_hostnames=true tags=merge(var.tags,{Name="vpc-minimal"}) }
resource "aws_internet_gateway" "igw" { vpc_id=aws_vpc.this.id tags=var.tags }
resource "aws_subnet" "public_a" { vpc_id=aws_vpc.this.id cidr_block="10.100.0.0/24" map_public_ip_on_launch=true availability_zone="${var.region}a" tags=merge(var.tags,{Name="public-a"}) }
resource "aws_route_table" "public" { vpc_id=aws_vpc.this.id tags=var.tags }
resource "aws_route_table_association" "a" { subnet_id=aws_subnet.public_a.id route_table_id=aws_route_table.public.id }
resource "aws_route" "igw" { route_table_id=aws_route_table.public.id destination_cidr_block="0.0.0.0/0" gateway_id=aws_internet_gateway.igw.id }
output "vpc_id" { value = aws_vpc.this.id }
